# src/server/models/api_error.go
@@ -1,0 +1,5 @@
+package models
+
+type ApiError struct {
+	Message string `json:"message"`
+}
